algorithm bugfixes